# operandi-mcp

./: README.md  operandi_mcp_server.py  pyproject.toml  server.json  smithery.yaml
